# dbt-jobs-as-code

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  makefile  mkdocs.yml  pyproject.toml  requirements.txt  versions.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  github-actions-demo.yml  mkdocs_main.yml  mkdocs_release.yml  release.yml
1.10/cli/: index.html
1.10/search/: search_index.json
1.11/cli/: index.html
1.11/search/: search_index.json
1.12/cli/: index.html
1.12/search/: search_index.json
1.12/typical_flows/: index.html
1.13/advanced_config/: index.html
1.13/cli/: index.html
1.13/getting_started/: index.html
1.13/search/: search_index.json
1.13/typical_flows/: index.html
1.14/cli/: index.html
1.14/search/: search_index.json
1.15/advanced_config/: index.html
1.15/cli/: index.html
1.15/search/: search_index.json
1.16/: index.html
1.16/cli/: index.html
1.16/github_actions_examples/: index.html
1.16/search/: search_index.json
1.3/: 404.html  index.html
1.3/advanced_config/: index.html
1.3/cli/: index.html
1.3/getting_started/: index.html
1.3/github_actions_examples/: index.html
1.3/search/: search_index.json
1.3/typical_flows/: index.html
1.4/cli/: index.html
1.4/getting_started/: index.html
1.4/search/: search_index.json
1.5/changelog/: index.html
1.5/cli/: index.html
1.5/search/: search_index.json
1.6/cli/: index.html
1.6/search/: search_index.json
1.6/typical_flows/: index.html
1.7/cli/: index.html
1.7/search/: search_index.json
1.8/changelog/: index.html
1.8/cli/: index.html
1.8/github_actions_examples/: index.html
1.8/search/: search_index.json
1.8/stylesheets/: extra.css
1.9/cli/: index.html
1.9/search/: search_index.json
docs/: changelog.md  cli.md  getting_started.md  github_actions_examples.md  index.md  typical_flows.md
docs/advanced_config/: glob_config_files.md  index.md  jobs_importing.md  json_output.md  override_job_name.md  sao.md  templating.md  yaml_anchors.md
example_cicd/: github_action.yml  plan_on_pr.yml  prod_plan_on_pr.yml  prod_sync_on_merge.yml  qa_plan_on_pr.yml  qa_sync_on_merge.yml  sync_on_merge.yml
example_cicd/gitlab/: multiple_env_plan_and_sync.yml  prod_plan_and_sync.yml
example_jobs_file/: jobs.yml  jobs_templated.yml  jobs_templated_vars.yml  jobs_with_anchors.yml
examples/: example_py_script_to_call.py  gha_call_py_script.yml  gha_run_bash_command.yml
main/: 404.html  index.html
main/changelog/: index.html
main/cli/: index.html
main/getting_started/: index.html
main/search/: search_index.json
main/typical_flows/: index.html
src/: github_action_hello_world.py  main.py
src/changeset/: change_set.py
src/client/: __init__.py
src/dbt_jobs_as_code/: main.py
src/exporter/: export.py
src/loader/: load.py
src/schemas/: __init__.py  common_types.py  config.py  custom_environment_variable.py  job.py  load_job_schema.json
supporting-code/: example_calling_dbt_cloud_api.py  jobs.yml  jobs_with_anchors.yml
suppporting-code/: example_calling_dbt_cloud_api.py  jobs.yml  pydantic-models.py
tests/: test_main.py
tests/changeset/: test_change_set.py  test_filter_config.py
tests/client/: test_build_params.py  test_check_for_creds.py  test_trailing_slash.py
tests/cloud_yaml_mapping/: test_exclude_identifiers.py  test_filter_config.py  test_validate_link.py
tests/exporter/: test_export.py
tests/importer/: test_importer.py
tests/integration-tests/: jobs_template.yml  test_flow.py
tests/loader/: conftest.py  jobs.yml  jobs_templated.yml  jobs_templated_vars.yml  jobs_templated_vars_missing.yml  jobs_with_anchors.yml  test_loader.py
tests/schemas/: test_check_job_mapping_same.py  test_custom_environment_variables.py  test_job.py  (+2 more)
(+27 files in other folders)
