[tool.poetry]
name = "dbt-jobs-as-code"
version = "0.9.0"
description = "A CLI to allow defining dbt Cloud jobs as code"
authors = ["dbt Labs <info@dbtlabs.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "dbt_jobs_as_code", from = "src"}]
repository = "https://github.com/dbt-labs/dbt-jobs-as-code.git"
keywords = ["dbt", "dbt Cloud"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
click = "^8.1.3"
requests = "^2.32.0"
loguru = "^0.6.0"
deepdiff = "^6.2.2"
pydantic = "^2.0.0"
croniter = "^1.3.8"
"ruamel.yaml" = "^0.17.21"
rich = "^12.6.0"
PyYAML = "^6.0.1"
python-dateutil = "^2.9"
beartype = "^0.18.5"
pytest-beartype = "^0.0.2"
jinja2 = "^3.1.4"
importlib-metadata = ">=6.0,<7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
jsonschema = "^4.17.3"

[tool.poetry.scripts]
dbt-jobs-as-code = "dbt_jobs_as_code.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
beartype_packages = 'src'

[tool.ruff]
line-length = 99
